-add my own ref formatting to keep with unsrtnat but abbreviate names (format.names) -inclusion of training objectives -include sponsor and institution choice -call out NPGI in summary more -talk about candidate and control SNPs -other general fixing

--- a/NSFdesc.tex
+++ b/NSFdesc.tex
@@ -36,28 +36,36 @@
 \end{wrapfigure}
 
 
-Fire has been crucial influence in global ecosystem processes, driving not only locally adapted phenotypes in plant populations 
-\citep{Lamont:1991js,Vega:2008vk,Midgley:2011dw,Keeley:2011jw,He:2012bz,Parchman:2012ca}, 
-but also impacting carbon storage and climate \citep{Bowman:2009kp}.  Understanding the underlying genetic architecture 
+Fire has been crucial influence in global ecosystem processes and on forested ecosystems, driving not only locally 
+adapted phenotypes in plant populations \citep{Lamont:1991js,Vega:2008vk,Midgley:2011dw,Keeley:2011jw,
+He:2012bz,Parchman:2012ca}, but also impacting carbon storage and climate \citep{Bowman:2009kp}.  
+Understanding the underlying genetic architecture 
 associated with fire-associated traits is therefore critical to dealing with environmental impacts of increased carbon inputs and 
 changing climate.  \citet{He:2012bz} recently investigated five fire-adapted traits for 101 species of \emph{Pinus} and found evidence 
 for a strong influence of fire in the Cretaceous on trait evolution.  However, they considered only presence or absence the traits in 
 their study.  \textbf{There have been no studies to date which capture, as in this proposal, the quantitative nature of fire-associated trait 
-evolution in these species.}.  
-
-The PI will investigate local adaptation of a complex trait in 2000 trees from four, economically-important species of pines with a range along 
-the eastern and south-eastern United States (25 trees from 20 populations for each specie).  The PI will study 
-thick bark (TB), as a quantitative phenotypic trait, in populations of slash pine (\emph{Pinus elliottii}), pond pine (\emph{P.\ serotina}), 
-loblolly pine (\emph{P.\ taeda}), and long leaf pine (\emph{P.\ palustris}).  Using next-generation, high-throughput sequencing, the PI 
-will dissect TB as a complex adaptive trait across populations of these four closely related species 
-with an eye toward uncovering shared genetic architecture at multiple evolutionary times scales.  
+evolution in these species.} 
 
 Plants display strong patterns of adaptation, especially local adaptation, when populations sizes are large \citep{Leimu:2008fb}.
 This characteristic is especially important in conifers, which display a lack of population structure and large effective population 
 sizes \citep{Neale:2004hi}; this is partly why association genetic studies have been so successful in these species 
-\citep{Eckert:2012cw,Eckert:2010hd, Wegrzyn:2010dd,Eckert:2009hh,GonzalezMartinez:2007gy,GonzalezMartinez:2006ij,Gupta:2005fx}.  
-Additionally, because linkage disequilibrium is low in conifer populations, it is possible to detect frequency differences in alleles significantly 
-associated with ecologically-relevant phenotypes \citep{Neale:2004hi}. 
+\citep{Eckert:2012cw,Eckert:2010hd, Wegrzyn:2010dd,Eckert:2009hh,GonzalezMartinez:2007gy,GonzalezMartinez:2006ij,Gupta:2005fx}.
+
+The PI will investigate the genetic architecture of a complex phenotype in 2000 trees from four, economically-important 
+species of pines with a range along the eastern and south-eastern United States (25 trees from 20 populations for each species), 
+an area with evidence of evolutionary impact of fire \textcolor{red}{CITATIONS?}
+Bark thickness is a highly heritable trait for forest trees and pines in general (e.g,  $H^2 \sim 0.65$ for \emph{P. taeda}) 
+\citep{Pederick1970}.  The PI will study bark thickness, as a quantitative, fire-adapted phenotypic trait, in populations of slash 
+pine (\emph{Pinus elliottii}), pond pine (\emph{P.\ serotina}), loblolly pine (\emph{P.\ taeda}), and long leaf pine 
+(\emph{P.\ palustris}).  \textbf{Using next-generation, high-throughput sequencing, the PI will dissect bark thickness as a complex 
+adaptive, quantitative trait across populations of these four closely related species with the goal of uncovering shared genetic 
+architecture at multiple evolutionary times scales.}  These findings have direct economic impact.  For example, \citet{Marshall:2006wl} 
+demonstrated the negative impact, in terms of financial loss, that bark has on the forest industry.  Being able to estimate accurate 
+bark thickness from a model (see Phase 1), therefore holds tremendous economic potential.  \citet{Paine:2011cu} have shown that 
+bark thickness, among other phenotypic traits, can directly impact ecological niche differentiation and evironmental filtering, both of 
+which, if understood more at the genetic level (i.e., segregating variation), could have a wide range of economic impacts, not only on 
+wood harvesting, but breeding programs, as well.  In other words, knowing the genes affecting bark thickness can help inform breeding 
+plans to breed to desired bark thickness to minimize loss.
 
 The application of next-generation sequencing technology to conifer genomes, as proposed in this study, holds the promise of 
 being able to provide a way to dissect the genetic architecture of an adaptive, and quantitative trait.  Until recently, techniques 
@@ -79,10 +87,17 @@ to consider adaptation on a genomic scale have been no match for the size and co
 \end{wrapfigure}
 However, advances in genomic enrichment techniques such as those by \citet{Parchman:2012ca} and \citet{Willing:2011jb} and 
 the ever-decreasing cost of DNA sequencing have facilitated studies to use genotype-by-sequencing (GBS) approaches to 
-answering fundamental questions in evolutionary biology in non-model species.  The PI is well-positioned to utilize the 
+answering fundamental questions in evolutionary biology in non-model species.  \textbf{The PI is well-positioned to utilize the 
 sophistication of the sequencing facilities at VCU coupled with his backgrounds in evolutionary, molecular, and 
-computational biology to study how thick bark has evolved across \emph{Pinus} and how this knowledge may serve to 
-inform ecologically-relevant and economically-important decisions related this important genus.
+computational biology to study how bark thickness has evolved across \emph{Pinus} and how this knowledge may serve to 
+inform ecologically-relevant and economically-important decisions related this important genus}.
+
+Dr. Andrew J. Eckert was chosen as a sponsor of this project due to his experience with association mapping 
+and evolutionary genetics in conifers. He has published over 30 papers in this field and is recognized as an authority 
+on complex trait dissection in forest tree populations.  The PI has elected to stay at VCU for this research due to the availability 
+of excellent faculty collaborators with extensive experience in phylogenetics and molecular evolution (Dr. Maria C. Rivera) and 
+landscape genetics (Dr. Rodney J. Dyer).  The research and teaching experience gained in this project will position the PI to 
+competitively seek a future tenure-track position at a tier 1 research institution.      
 
 This study is laid out below in three general phases: (1) field sampling, (2) DNA sequencing and bioinformatics, and (3) 
 hypothesis testing.  A projected timeline for this project is shown in Figure \ref{f:timeline}.
@@ -91,30 +106,30 @@ hypothesis testing.  A projected timeline for this project is shown in Figure \r
 
 \paragraph{Field sampling}
 
-The PI will sample four species in their natural ranges, with 25 individuals from 20 natural populations (Figure \ref{f:range}).  
-The locations will be determined randomly.  Within each population, a representative 
-of the focal species will be chosen and all other members will be chosen from with \SI{50}{m} of the first sampling location meeting 
-the requirement of having DBH of at least \SI{15}{\cm}.  Three to five needle fascicles will be collected at each from each 
-tree for use in DNA extraction.  Needles, with a desiccant, will be stored in \SI{15}{\ml} Falcon\texttrademark\ tubes  at 
-ambient temperatures in the field and in \SI{-80}{\celsius}, long-term in the laboratory.  
+The PI will sample four species in their natural ranges, with 25 individuals from 20 natural populations for each 
+species (Figure \ref{f:range}).  The locations of each population will be determined randomly.  Within each population, a representative 
+of the focal species will be chosen and all other members will be chosen to be at least \SI{50}{m} from the first sampling 
+location to avoid sampling close relatives.  Only trees with diameter at breast height (\SI{1.25}{m} above ground; DBH) of at least 
+\SI{15}{cm} will be sampled. All efforts will be made to sample adult trees with similar DBHs, so as to standardize ages within sites.
+Three to five needle fascicles will be collected at each from each tree for use in DNA extraction.  Needles, with a desiccant, 
+will be stored in \SI{15}{\ml} Falcon\texttrademark\ tubes  at ambient temperatures in the field and in \SI{-80}{\celsius}, 
+long-term in the laboratory.  
 
-Thick bark will be treated as a quantitative character and will be estimated for each tree using a regression model based 
-upon tree height and diameter at breast height (DBH) \citep{Cao:1986th, Li:2010bl}.  Measurements of tree height will be obtained using a 
-clinometer.  Additionally, measurements of bark thickness will be taken from a representative set of five trees from each population.  
-This will allow for the application of a multiple regression model to non-invasively estimate the bark thickness from the other 
-\SI{80}{\percent} of the individuals in each population.  Briefly, for each of the sampling trees chosen for invasive sampling, a 
-Hagl\"{o}ff\textsuperscript{\textregistered} bark gauge will be used to measure the bark thickness.  These measurements will be used as a covariate in the 
-regression equation from \citeauthor{Cao:1986th}, which has been shown to significantly decrease bias by up to \SI{43}{\percent} 
-in some species \citep{Li:2010bl}.  At the end of sampling, \num{2000} individual tubes of needles (20--25 needles/tube) 
-will be banked along with bark thickness measurements and estimates for all trees for all species.
+Bark thickness will be treated as a quantitative character in all downstream analyses, and as such, will be measured for each tree at five 
+random locations around DBH.  Measurements of bark thickness will be taken using a 
+Hagl\"{o}ff\textsuperscript{\textregistered} bark gauge, and height of the tree will be measured using a clinometer.  These values 
+will also be used to obtain the best possible regression model for future studies in these species, using the 
+regression equation from \citeauthor{Cao:1986th}.  Including these covariates has been shown to significantly decrease estimation
+bias by up to \SI{43}{\percent} in some species \citep{Li:2010bl}.  At the end of sampling, \num{2000} individual tubes of 
+needles (20--25 needles/tube) will be banked along with bark thickness measurements and estimates for all trees for all species.
 
 \paragraph{DNA extraction}
 Genomic DNA will be extracted from leaf tissue Qiagen DNEasy extraction kits in a 96-well format using an existing tissue preparation
-protocol in the Eckert lab.  A single DNA extraction from multiple leaves per individual will be performed resulting in \num{2000} 
+protocol in the Eckert lab located at VCU.  A single DNA extraction from multiple leaves per individual will be performed resulting in \num{2000} 
 individual genomic DNA extracts.  
 
 \paragraph{Criteria for completion}
-Aim 1 will be designated complete when genomic DNA has been extracted for all \num{2000} individuals.  DNA quantitation data as well 
+Phase 1 will be designated complete when genomic DNA has been extracted for all \num{2000} individuals.  DNA quantitation data as well 
 as sample metadata will be stored in a relational database management system (RDBMS) that will also house sequencing and 
 genotyping data from phase 2.  It is estimated that phase 1 will be complete by June 2014.
 
@@ -148,22 +163,25 @@ high quality reads to indicate a difference between the sample and the reference
 from NGS technology requires the use of new SNP calling algorithms that properly model all the sources of errors (e.g, base 
 calling errors, mapping errors, and sample preparation errors, particularly PCR errors can have a significant impact on the analysis).
 Several tools have been developed to perform this task such as as SAMtools \citep{Li:2009ka}, GATK \citep{McKenna:2010bv}, and, 
-more recently, GeMS \citep{You:2012iy}.   The result of this aim will be a sample (n = 2000) by SNP matrix (n = thousands) for each 
-species (n = 4).  
+more recently, GeMS \citep{You:2012iy}.   The result of this phase will be a sample ($n = 2000$) by SNP matrix ($n = \text{thousands}$) for each 
+species ($n = 4$).  
 
-\paragraph{Criteria for completion} Aim 2 will be complete when all libraries have been sequenced and processed.  Processing 
+\paragraph{Criteria for completion} Phase 2 will be complete when all libraries have been sequenced and processed.  Processing 
 will include demultiplexing of reads according to individual, quality control processing of the reads, and storage both on disk and 
 in a relational database system.  The sequence data will be made available to the scientific community at this point.  Additionally, 
-mapping to the loblolly genome and SNP calling will result in a sample by SNP matrix.  This aim is the most computationally 
+mapping to the loblolly genome and SNP calling will result in a sample by SNP matrix.  This phase is the most computationally 
 complex, and should be complete in early summer 2015.  
 
 \subsection*{Phase 3: Perform statistical analysis and hypothesis testing}
 
-\subsubsection*{Question 1: What is the genetic architecture of the thick bark phenotype for the four focal pine species that 
+This phase will focus on uncovering genetic architecture of bark thickness, summarized as four main questions.  Results 
+from each hypothesis will feed into downstream questions, in a linear fashion.
+
+\subsubsection*{Question 1: What is the genetic architecture of bark thickness for the four focal pine species that 
 are adapted to fire?}
 
-\paragraph{Null hypothesis} $H_0$: There is no association between genotypic variation at surveyed SNPs and thick bark 
-phenotypes in any of the four species.
+\paragraph{Null hypothesis} $H_0$: There is no association between genotypic variation at surveyed SNPs and bark thickness 
+in any of the four species.
 
 \paragraph{Methods} The PI will employ standard linear models that correct for kinship and population structure that are 
 commonly used in genome-wide association studies (GWAS; \citet{Yu:2006ij}). Association analysis has been widely 
@@ -173,20 +191,16 @@ was the first GWAS for a conifer, and regression tree approaches presented by \c
 Linear models will be used to explicitly test the effects of genotypic class of each discovered SNP on quantitative 
 measures of bark thickness for each species. Thus, the number of tests for genotypic effects for each species will 
 be equal to the number of discovered SNPs, which is expected to be in the range of \num{50000} to \num{100000}. 
-\citep{Parchman:2012ca}. Multiple tests will be accounted for using a permutation approach that adjusts the 
-global significance level (e.g., $\alpha= 0.05$). In brief, this procedure randomizes genotypic vectors relative to the 
-phenotypic vector to produce a large number of randomized data sets (e.g., \num{10000}). For each randomized data 
-set, the association analysis is conducted again and the minimum \emph{P}-value associated with a genotypic effect is 
-retained. Finally, the multiple-test corrected $\alpha = 0.05$ is then the \SI{5}{\percent} quantile of the distribution of 
-minimum \emph{P}-value. 
+\citep{Parchman:2012ca}.  Multiple tests will be accounted for using a minimum \emph{P}-value approach 
+\citep{Conneely:2007ga}.
 
 \paragraph{Expected outcomes and relevance} The null hypothesis will be rejected when at least one SNP in each 
 of the four pine species is significantly associated to quantitative variation in bark thickness. Previous association 
-studies in conifers typically identify five to 20 plus SNPs associated with the trait under consideration 
-\citet{Eckert:2012cw}. These results will classify SNPs discovered into each species into two classes: those 
+studies in conifers typically identify five to 20 or more SNPs associated with the trait under consideration 
+\citep{Eckert:2012cw}. These results will classify SNPs discovered into each species into two classes: those 
 associated to bark thickness (which rejects the null hypothesis for this question) and those unassociated with 
 bark thickness. The latter will be used as controls for questions two through four. The former establishes the 
-genetic architecture of bark thickness for each focal species.
+genetic architecture of bark thickness for each focal species, and will be referred to as candidates.
 
 \subsubsection*{Question 2: Is the identified genetic architecture (e.g. the set of SNPs for each species) from Question 1 
 shared across the four focal species, and if so, is it shared to a greater extent than random variation within the 
@@ -197,7 +211,7 @@ the four focal species. ${H_{0}}^2$: The degree of allele sharing is greater for
 bark thickness than randomly selected loci.
 
 \paragraph{Methods} To evaluate ${H_{0}}^1$, the PI will leverage the underlying, queryable data storage infrastructure 
-to produce the intersection of SNPs associated with bark thickness in all four focal species.  From Aim 2, confidence in SNP 
+to produce the intersection of SNPs associated with bark thickness in all four focal species.  From phase 2, confidence in SNP 
 calls can be quantified because the genome of the reference organism is represented in the set of focal species.  
 To evaluate ${H_{0}}^2$, the union of all SNPs associated with bark thickness 
 will be created. The fraction of this list that is shared across all four species will be used as a test statistic, the magnitude 
@@ -216,14 +230,13 @@ enrichment of allele sharing at loci associated to a trait such as bark thicknes
 \citep{He:2012bz} would imply additional processes such as natural selection, as in \cite{Segurel:vf}, in promoting allele 
 sharing among species.
 
-\paragraph{Expected outcomes and relevance} ${H_{0}}^1$ will be rejected when multiple SNPs (i.e., $> 5$) associated 
+\paragraph{Expected outcomes and relevance} ${H_{0}}^1$ will be rejected when multiple SNPs associated 
 with bark thickness are shared across species. The relevance of this result would be to establish the shared genetic 
 architecture of an adaptive trait. ${H_{0}}^2$ will be rejected when the fraction of SNPs associated to bark thickness that are 
 shared across the four focal species lies in the upper \SI{1}{\percent} tail (i.e., $\alpha = 0.01$ for a one-tailed test) 
 of the null distribution based upon random sets of unassociated SNPs. The relevance of this result would be to 
 establish that a process beyond incomplete lineage sorting, admixture and gene flow is contributing to the 
-maintenance of trans-species 
-polymorphisms across the four focal species. 
+maintenance of shared alleles across the four focal species. 
 
 \subsubsection*{Question 3: Are reconstructed allele frequencies at shared SNPs that are associated with bark thickness 
 correlated more so with reconstructed bark thickness than randomly selected shared SNPs that are unassociated with bark 
@@ -235,12 +248,12 @@ randomly chosen SNPs unassociated with bark thickness.
 
 \paragraph{Methods} Phylogenies and associated data matrices for genus \emph{Pinus} will be obtained from 
 TreeBASE \citep{Morell:to} and GenBank \citep{Benson:2012kf}. Most data matrices are constructed primarily from 
-cpDNA coding sequences \citep{Eckert:2006iw, Gernandt:2008df} and cpDNA genome sequences (e.g. Parks et al., 2008). 
+cpDNA coding sequences \citep{Eckert:2006iw, Gernandt:2008df} and cpDNA genome sequences \citep{Parks:2009bd}. 
 Chronograms will be obtained using the fossil calibration points from \citet{Willyard:2007in} as presented in \citet{He:2012bz}. 
 Once a set of plausible chronograms has been 
 generated, bark thickness and allele frequencies within lineages will be reconstructed as quantitative 
 characters using a Bayesian method \citep{Pagel:2004ic}.
-Specifically, we will utilize a set of plausible chronograms (n =  \num{10,000}) to account for uncertainty in 
+Specifically, we will utilize a set of plausible chronograms ($n =  \num{10000}$) to account for uncertainty in 
 phylogenetic tree and the character states in combination with phylogenetically informed multiple 
 regression analyses, available in BayesTraits as BayesContinuous \citep{Pagel:2004ic},  to test the association with 
 reconstructed SNP allele frequencies and bark thickness for two types of SNPs: those shared across 
@@ -254,22 +267,24 @@ This suggests that the correlation structure of allele frequencies with bark thi
 as defined by answering questions 1 and 2. Since controls are matched in number and levels of heterozygosity with the candidates, 
 this would suggest non-neutral processes driving this difference.
 
-\subsubsection*{Question 4: To what extent is natural selection maintaining the fire-associated, thick bark phenotype in these focal species?}
+\subsubsection*{Question 4: To what extent is natural selection maintaining the fire-adapted bark thickness in these focal species?}
 
 \paragraph{Null hypothesis} $H_0$: There is no evidence of selection in genes containing SNPs that are significantly associated 
-with thick bark.
+with bark thickness.
 
-\paragraph{Methods} As the loblolly pine genome continue to improve, establishing the genomic context of thick 
-bark-associated SNPs will enable the PI to test for evidence of selection in polymorphic, protein coding genes.  The PI will select 
-10 to 20 SNPs from a subset of associated loci from each population for each species.   Using genomic position of SNPs and the loblolly 
-genome annotations, the PI will design PCR primers to amplify the protein coding regions from each tree, and each amplicon will be sent 
-for Sanger sequencing.  Once the sequences have been obtained and translated to amino acids, they will be aligned at the amino acid level 
-using standard tools such as MAFFT \citep{Katoh:2005ia} or MUSCLE \citep{Edgar:2004ic}.  From the alignment (back-translated to DNA), 
-$d_N/d_S$ will be estimated using established maximum likelihood methods \citep{Yang:2007ki}.
+\paragraph{Methods} As the loblolly pine genome continue to improve, establishing the genomic context of 
+bark thickness-associated SNPs will enable the PI to test for evidence of selection in polymorphic, protein coding genes.  
+The PI will select 10 up to 20 SNPs from subsets of candidate and control loci from each population for each species 
+exhibiting similar attributes (e.g., average heterozygosity).   Using genomic position of SNPs and the loblolly genome 
+annotations, the PI will design PCR primers to amplify the protein coding regions from each tree, and each amplicon will 
+be sent for Sanger sequencing.  Once the sequences have been obtained and translated to amino acids, they will be 
+aligned at the amino acid level using standard tools such as MAFFT \citep{Katoh:2005ia} or MUSCLE \citep{Edgar:2004ic}.  
+From the alignment (back-translated to DNA), $d_N/d_S$ will be estimated using established maximum likelihood methods 
+\citep{Yang:2007ki}.
 
 \paragraph{Expected outcome and relevance}  Knowing whether or not genes containing SNPs are under positive ($d_N/d_S > 1$) or 
 purifying selection ($d_N/d_S < 1$) addresses a fundamental question surrounding maintenance of these polymorphisms in 
-natural populations.  
+natural populations.
 
 \required{Broader Impacts}
 % as in the project summary, broader impacts must be called out separately 
