--- a/NSFsumm.tex
+++ b/NSFsumm.tex
@@ -6,11 +6,11 @@
 % This should be a brief statement of the problem you plan to address.
 % It should look something like an abstract. 
 
-The main goal of this project is to investigate the fire-adapted, thick bark (TB) phenotype in four, economically-important, 
+The main goal of this project is to investigate bark thickness as a fire-adapted phenotype in four, economically-important, 
 species of pines with a range along the eastern and south-eastern United States.  The evolution of this complex trait will 
 be studied in populations of slash pine (\textit{Pinus elliottii}), pond pine (\textit{P.\ serotina}), loblolly pine (\textit{P.\ taeda}), 
 and long leaf pine (\textit{P.\ palustris}).  Next generation sequencing (NGS) of 25 individuals from 20 natural populations for each 
-species (25 x 20 x 4 = 2000 total individuals) will be used to genotype individuals with an eye toward uncovering shared 
+species (25 x 20 x 4 = 2000 total individuals) will be used to genotype individuals with the goal of uncovering shared 
 genetic architecture of these four closely related species. The results of this research, while also providing new genomic 
 resources for non-model species and augmenting exiting resources, will not only address fundamental principles in 
 evolutionary biology, but also serve to inform and improve breeding programs and land management initiatives in 
@@ -20,8 +20,10 @@ Fire has played an important role in the evolutionary paths of many adaptive tra
 and habitats.  Extant \textit{Pinaceae} species occupy a variety of habitats across North and Central America, Asia, and Europe.  
 These areas have been strongly influenced by fire, and as such, their plants have developed a range 
 of fire-adapted traits.  This study will investigate the underlying genetic architecture associated with the complex 
-TB phenotype, the degree to which this architecture is shared among four closely related species across their natural 
-ranges and multiple evolutionary time scales, and how this variability can inform current economic interests.  
+bark thickness phenotype, the degree to which this architecture is shared among four closely related species across their natural 
+ranges and multiple evolutionary time scales, and how this variability can inform current economic interests.  \textbf{Thus, this research 
+directly applies to the overall goal of the NPGI by developing a basic knowledge of the structures and functions of economically 
+important plant genomes}.
 
 
 \required{Intellectual Merit}
@@ -33,8 +35,9 @@ associated with the vast majority of incomplete lineage sorting among population
 The rise of shared phenotypes between related species has been a source of debate for many years, dividing 
 into camps supporting either ancient inherited polymorphisms or multiple instances of convergent evolution.  Very recently, 
 \citet{Segurel:vf} showed that the ABO blood group antigens in humans are the result of vertical inheritance 
-of maintained, ancient polymorphisms rather than the commonly-held view of convergent evolution of this 
-multiallelic phenotype.  In short, this study seeks to investigate the same phenomenon in a quantitative, economically and 
+of maintained, ancient polymorphisms and \citet{Roux:2012eb} demonstrated balancing selection around the S-locus in two 
+species of  \emph{Arabidopsis}.  
+In short, this study seeks to investigate the same phenomena in a quantitative, economically and 
 environmentally-important, quantitative trait in four species of related plants at multiple evolutionary time scales.  Additionally, 
 the genomic resources developed in this project will augment and facilitate knowledge transfer of genomic data in non-model 
 species which, until recently, has been technologically out of reach.
@@ -49,8 +52,7 @@ species which, until recently, has been technologically out of reach.
 % understanding
 % 4. benefits of the proposed activity to society
 
-The PI is committed to fostering open and transparent scientific research.  Toward this end, data will be made 
-available for download and exploration from VCU-hosted FTP and web sites.  Second, the PI will develop and teach a new 
+Data will be made available for download and exploration from VCU-hosted FTP and web sites.  Also, the PI will develop and teach a new 
 graduate course, Applied Ecological Genomics, to introduce and expose students to the bioinformatic skills necessary 
 to effectively manage terabases of data as well as how to exploit NGS data to infer population-level, evolutionary processes.   
 Finally, this will give the PI additional teaching and research experience needed to jumpstart an academic career, focusing on 
