--- a/refs.bib
+++ b/refs.bib
@@ -907,6 +907,95 @@ month = jul,
 url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=16621612&retmode=ref&cmd=prlinks}
 }
 
+@article{Pederick1970,
+	author={L. A. Pederick},
+	year={1970},
+	title={Variation and inheritance of stem form and bark thickness in young Loblolly Pine.},
+	journal={Technical Report.Sch.For.Resour.N.C.St.Univ.},
+	number={41},
+	pages={44-44}
+}
+
+@article{Parks:2009bd,
+author = {Parks, Matthew and Cronn, Richard and Liston, Aaron},
+title = {{Increasing phylogenetic resolution at low taxonomic levels using massively parallel sequencing of chloroplast genomes.}},
+journal = {Bmc Biology},
+year = {2009},
+volume = {7},
+pages = {84--84},
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=19954512&retmode=ref&cmd=prlinks}
+}
+
+@article{Roux:2012eb,
+author = {Roux, C and Pauwels, M and Ruggiero, M V and Charlesworth, D and Castric, V and Vekemans, X},
+title = {{Recent and ancient signature of balancing selection around the S-locus in Arabidopsis halleri and A. lyrata}},
+journal = {Molecular Biology and Evolution},
+year = {2012},
+month = oct,
+url={http://mbe.oxfordjournals.org/content/early/2012/10/26/molbev.mss246.abstract}
+}
+
+@article{Conneely:2007ga,
+author = {Conneely, Karen N and Boehnke, Michael},
+title = {{So many correlated tests, so little time! Rapid adjustment of P values for multiple correlated tests.}},
+journal = {American Journal of Human Genetics},
+year = {2007},
+volume = {81},
+number = {6},
+pages = {1158--1168},
+month = dec,
+url={http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?dbfrom=pubmed&id=17966093&retmode=ref&cmd=prlinks}
+}
+
+@inproceedings{DeCoster:1999ww,
+author = {DeCoster, J and Platt, W J and Riley, S A},
+title = {{Pine savannas of Everglades National Park: an endangered ecosystem}},
+booktitle = {Florida's garden of good and evil. Proceedings of the 1998 Joint Symposium of the Florida Exotic Pest Plant Council and the Florida Native Plant Society},
+year = {1999},
+editor = {Jones, D T and Gamble, B W},
+pages = {81--88},
+address = {Homestead, FL}, 
+url={http://www.fleppc.org/Proceedings/decoste.pdf}
+}
+
+@article{Marshall:2006wl,
+author = {Marshall, H D and Murphy, G E and Lachenbruch, B},
+title = {{Effects of bark thickness estimates on optimal log merchandising}},
+journal = {Forest Products Journal},
+year = {2006},
+volume = {56},
+number = {11/12},
+pages = {87--92},
+url={http://hdl.handle.net/1957/17956}
+}
+
+@article{Paine:2011cu,
+author = {Paine, C E Timothy and Baraloto, Christopher and Chave, J{\'e}r{\^o}me and H{\'e}rault, Bruno},
+title = {{Functional traits of individual trees reveal ecological constraints on community assembly in tropical rain forests}},
+journal = {Oikos},
+year = {2011},
+volume = {120},
+number = {5},
+pages = {720--727},
+month = mar,
+url={http://doi.wiley.com/10.1111/j.1600-0706.2010.19110.x}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
