--- a/NSFmaster.tex
+++ b/NSFmaster.tex
@@ -2,6 +2,7 @@
 %%%%%%%%% MASTER -- compiles the 4 sections
 
 \documentclass[11pt,letterpaper]{article}
+\usepackage[margin=1in, letterpaper, includefoot]{geometry}
 \usepackage{url}
 \usepackage{fancyhdr}
 \usepackage{tabularx}
@@ -14,14 +15,15 @@
 \usepackage{pgfgantt}
 \usepackage{titlesec}
 
-\setlength{\textwidth}{6.5in}    
-\setlength{\oddsidemargin}{0in}   
-\setlength{\evensidemargin}{0in}  
-\setlength{\textheight}{8.5in}   
-\setlength{\topmargin}{0in}       
-\setlength{\headheight}{0in}      
-\setlength{\headsep}{0pt}         
-\setlength{\footskip}{0.5in}       
+
+%\setlength{\textwidth}{6.5in}    
+%\setlength{\oddsidemargin}{0in}   
+%\setlength{\evensidemargin}{0in}  
+%\setlength{\textheight}{8.5in}   
+%\setlength{\topmargin}{0in}       
+%\setlength{\headheight}{0in}      
+%\setlength{\headsep}{0in}         
+%\setlength{\footskip}{-0.75in}       
 
 \newcommand{\required}[1]{\section*{\centering{#1}}}
 \renewcommand{\refname}{\centering{References Cited}}                   
